--- a/index.html
+++ b/index.html
@@ -66,15 +66,16 @@
         </a>
       </div>
       <div class="container">
-        <div class="row mt-5">
-          <div class="col-6">
+        <div class="row">
+          <div class="col-sm-6">
             <img
               src="images/yoga.png"
               alt="Yoga website"
-              class="img-fluid rounded"
+              class="img-fluid rounded yoga d-none d-sm-block"
             />
           </div>
-          <div class="col-6">
+
+          <div class="col-sm-6">
             <h2 class="text-start mb-3">Yoga app</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -82,6 +83,7 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
+
             <div class="mt-3">
               <a href="#" type="button" class="btn btn-primary pt-2 pb-2"
                 >Launch Yoga App</a
@@ -90,9 +92,10 @@
           </div>
         </div>
       </div>
+
       <div class="container">
         <div class="row mt-5">
-          <div class="col-6">
+          <div class="col-sm-6">
             <h2 class="text-start mb-3">Weather app</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -106,25 +109,25 @@
               >
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <img
               src="images/weather.png"
               alt="Weather website"
-              class="img-fluid rounded"
+              class="img-fluid rounded weather d-none d-sm-block"
             />
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row mt-5">
-          <div class="col-6">
+          <div class="col-sm-6">
             <img
               src="images/yogurt.png"
               alt="Yogurt website"
-              class="img-fluid rounded"
+              class="img-fluid rounded yogurt d-none d-sm-block"
             />
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <h2 class="text-start mb-3">Yogurt app</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
