--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
           </div>
 
           <div class="col-sm-6">
-            <h2 class="text-start mb-3">Yoga app</h2>
-            <p>
+            <h2 class="mb-3 text-md-start">Yoga app</h2>
+            <p class="text-center text-md-start">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Perferendis quia, dignissimos nam ratione veniam quibusdam porro
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
 
-            <div class="mt-3">
+            <div class="mt-3 text-center text-md-start">
               <a href="#" type="button" class="btn btn-primary pt-2 pb-2"
                 >Launch Yoga App</a
               >
@@ -96,14 +96,14 @@
       <div class="container">
         <div class="row mt-5">
           <div class="col-sm-6">
-            <h2 class="text-start mb-3">Weather app</h2>
-            <p>
+            <h2 class="text-md-start mb-3">Weather app</h2>
+            <p class="text-center text-md-start">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Perferendis quia, dignissimos nam ratione veniam quibusdam porro
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <div class="mt-3">
+            <div class="mt-3 text-center text-md-start">
               <a href="#" type="button" class="btn btn-primary pt-2 pb-2"
                 >Launch Weather App</a
               >
@@ -128,14 +128,14 @@
             />
           </div>
           <div class="col-sm-6">
-            <h2 class="text-start mb-3">Yogurt app</h2>
-            <p>
+            <h2 class="text-md-start mb-3">Yogurt app</h2>
+            <p class="text-center text-md-start">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Perferendis quia, dignissimos nam ratione veniam quibusdam porro
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <div class="mt-3">
+            <div class="mt-3 text-center text-md-start">
               <a href="#" type="button" class="btn btn-primary pt-2 pb-2"
                 >Launch Yogurt App</a
               >
