Reformat images to optimize for mobile devices

--- a/about.html
+++ b/about.html
@@ -61,25 +61,25 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-sm-4">
             <img
               src="images/yoga.png"
               alt="Yoga website"
-              class="img-fluid border border-1 border-white shadow p-1 mb-5 bg-body rounded"
+              class="img-fluid border border-1 border-white shadow p-2 mb-5 bg-body rounded"
             />
           </div>
-          <div class="col-lg-4">
+          <div class="col-sm-4">
             <img
               src="images/weather.png"
               alt="Weather website"
-              class="img-fluid border border-1 border-white shadow p-1 mb-5 bg-body rounded"
+              class="img-fluid border border-1 border-white shadow p-2 mb-5 bg-body rounded"
             />
           </div>
-          <div class="col-lg-4">
+          <div class="col-sm-4">
             <img
               src="images/yogurt.png"
               alt="Yohurt website"
-              class="img-fluid border border-1 border-white shadow p-1 mb-5 bg-body rounded"
+              class="img-fluid border border-1 border-white shadow p-2 mb-5 bg-body rounded"
             />
           </div>
         </div>
