--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
-    <title>Sophie Kaufhold: Front-end Development Projects</title>
+    <title>Sophie Kaufhold – Front-end Development Projects</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
       <div class="container-fluid ms-3">
-        <a class="navbar-brand" href="#">Sophie Kaufhold</a>
+        <a class="navbar-brand" href="#" title="Sophie Kaufhold"
+          >Sophie Kaufhold</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -39,7 +41,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#" title="Home"
+              >Home</a
+            >
             <a class="nav-link" href="about.html" title="About me">About me</a>
             <a class="nav-link" href="about.html#contact" title="Contact me"
               >Contact me</a
@@ -85,7 +89,7 @@
             </p>
 
             <div class="mt-3 text-center text-md-start">
-              <a href="#" type="button" class="btn btn-primary pt-2 pb-2"
+              <a href="#" type="button" class="btn btn-primary pt-2 pb-2" title="Launch Yoga App"
                 >Launch Yoga App</a
               >
             </div>
@@ -104,7 +108,7 @@
               minima fugiat explicabo eum dolore.
             </p>
             <div class="mt-3 text-center text-md-start">
-              <a href="#" type="button" class="btn btn-primary pt-2 pb-2"
+              <a href="#" type="button" class="btn btn-primary pt-2 pb-2" title="Launch Weather App"
                 >Launch Weather App</a
               >
             </div>
@@ -136,7 +140,7 @@
               minima fugiat explicabo eum dolore.
             </p>
             <div class="mt-3 text-center text-md-start">
-              <a href="#" type="button" class="btn btn-primary pt-2 pb-2"
+              <a href="#" type="button" class="btn btn-primary pt-2 pb-2" title="Launch Yogurt App"
                 >Launch Yogurt App</a
               >
             </div>
