--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
-    <title>About Sophie Kaufhold</title>
+    <title>Sophie Kaufhold – About me</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
       <div class="container-fluid ms-3">
-        <a class="navbar-brand" href="#">Sophie Kaufhold</a>
+        <a class="navbar-brand" href="#" title="Sophie Kaufhold">Sophie Kaufhold</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,9 +40,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link active" href="about.html">About me</a>
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
+            <a class="nav-link active" href="about.html" title="About me">About me</a>
+            <a class="nav-link" href="about.html#contact" title="Contact me">Contact me</a>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
           <div class="col-sm-4">
             <img
               src="images/yogurt.png"
-              alt="Yohurt website"
+              alt="Yogurt website"
               class="img-fluid border border-1 border-white shadow p-2 mb-5 bg-body rounded"
             />
           </div>
@@ -86,7 +86,7 @@
       </div>
       <h2>📮 Contact me</h2>
       <div id="contact">
-        <a href="mailto:sophie.kaufhold@posteo.de" class="mail-link">
+        <a href="mailto:sophie.kaufhold@posteo.de" class="mail-link" title="sophie.kaufhold@posteo.de">
           sophie.kaufhold@posteo.de</a
         >
       </div>
