--- a/about.html
+++ b/about.html
@@ -21,12 +21,14 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
-    <title>Sophie Kaufhold – About me</title>
+    <title>Sophie Kaufhold – About Me & Contact Information</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
       <div class="container-fluid ms-3">
-        <a class="navbar-brand" href="#" title="Sophie Kaufhold">Sophie Kaufhold</a>
+        <a class="navbar-brand" href="#" title="Sophie Kaufhold"
+          >Sophie Kaufhold</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -40,9 +42,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
-            <a class="nav-link active" href="about.html" title="About me">About me</a>
-            <a class="nav-link" href="about.html#contact" title="Contact me">Contact me</a>
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="index.html"
+              title="Home"
+              >Home</a
+            >
+            <a class="nav-link active" href="about.html" title="About me"
+              >About me</a
+            >
+            <a class="nav-link" href="about.html#contact" title="Contact me"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -86,7 +98,11 @@
       </div>
       <h2>📮 Contact me</h2>
       <div id="contact">
-        <a href="mailto:sophie.kaufhold@posteo.de" class="mail-link" title="sophie.kaufhold@posteo.de">
+        <a
+          href="mailto:sophie.kaufhold@posteo.de"
+          class="mail-link"
+          title="sophie.kaufhold@posteo.de"
+        >
           sophie.kaufhold@posteo.de</a
         >
       </div>
