--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
             </p>
 
             <div class="mt-3 text-center text-md-start">
-              <a href="#" type="button" class="btn btn-primary pt-2 pb-2" title="Launch Yoga App"
+              <a
+                href="#"
+                type="button"
+                class="btn btn-primary pt-2 pb-2"
+                title="Launch Yoga App"
                 >Launch Yoga App</a
               >
             </div>
@@ -108,7 +112,11 @@
               minima fugiat explicabo eum dolore.
             </p>
             <div class="mt-3 text-center text-md-start">
-              <a href="#" type="button" class="btn btn-primary pt-2 pb-2" title="Launch Weather App"
+              <a
+                href="#"
+                type="button"
+                class="btn btn-primary pt-2 pb-2"
+                title="Launch Weather App"
                 >Launch Weather App</a
               >
             </div>
@@ -140,7 +148,11 @@
               minima fugiat explicabo eum dolore.
             </p>
             <div class="mt-3 text-center text-md-start">
-              <a href="#" type="button" class="btn btn-primary pt-2 pb-2" title="Launch Yogurt App"
+              <a
+                href="#"
+                type="button"
+                class="btn btn-primary pt-2 pb-2"
+                title="Launch Yogurt App"
                 >Launch Yogurt App</a
               >
             </div>
