--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
           </div>
 
           <div class="col-sm-6">
-            <h2 class="mb-3 text-md-start">Yoga app</h2>
-            <p class="text-center text-md-start">
+            <h2 class="mb-3 text-sm-start">Yoga app</h2>
+            <p class="text-center text-sm-start">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Perferendis quia, dignissimos nam ratione veniam quibusdam porro
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
 
-            <div class="mt-3 text-center text-md-start">
+            <div class="mt-3 text-center text-sm-start">
               <a
                 href="#"
                 type="button"
@@ -104,14 +104,14 @@
       <div class="container">
         <div class="row mt-5">
           <div class="col-sm-6">
-            <h2 class="text-md-start mb-3">Weather app</h2>
-            <p class="text-center text-md-start">
+            <h2 class="text-sm-start mb-3">Weather app</h2>
+            <p class="text-center text-sm-start">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Perferendis quia, dignissimos nam ratione veniam quibusdam porro
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <div class="mt-3 text-center text-md-start">
+            <div class="mt-3 text-center text-sm-start">
               <a
                 href="#"
                 type="button"
@@ -140,14 +140,14 @@
             />
           </div>
           <div class="col-sm-6">
-            <h2 class="text-md-start mb-3">Yogurt app</h2>
-            <p class="text-center text-md-start">
+            <h2 class="text-sm-start mb-3">Yogurt app</h2>
+            <p class="text-center text-sm-start">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Perferendis quia, dignissimos nam ratione veniam quibusdam porro
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <div class="mt-3 text-center text-md-start">
+            <div class="mt-3 text-center text-sm-start">
               <a
                 href="#"
                 type="button"
